--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "evite-admin-front",
+  "name": "e-invite--admin-front",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
