--- a/package.json
+++ b/package.json
@@ -6,12 +6,14 @@
     "@reduxjs/toolkit": "^1.8.0",
     "axios": "^0.26.1",
     "bootstrap": "^5.1.3",
+    "bootstrap-icons": "^1.8.1",
     "react": "^17.0.2",
     "react-bootstrap": "^2.2.1",
     "react-bootstrap-icons": "^1.7.2",
     "react-dom": "^17.0.2",
     "react-redux": "^7.2.6",
-    "react-router-dom": "^6.3.0"
+    "react-router-dom": "^6.3.0",
+    "recharts": "^2.1.9"
   },
   "devDependencies": {
     "@testing-library/jest-dom": "^5.16.2",
